--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,8 @@
 @import url('reset.css');
 @import url('viewport-fix.css');
 
+body { 
+    background: black;
+}
+
 /* COMPONENTS ARE LOADED VIA MAIN.JS */
